feat: use interfaces that inherit from uvic-course-scraper for now
