# functions/src/courses/Course.model.ts
@@ -1,4 +1,32 @@
-export interface Course {
-  pid: string;
-  title: string;
+import {
+  KualiCourseCatalog,
+  KualiCourseItem,
+} from '@isaaccormack/uvic-course-scraper/dist/src/types';
+
+export interface Course
+  extends Pick<KualiCourseCatalog, 'pid' | 'title' | 'dateStart'> {
+  subject: string;
+  code: string;
+}
+
+export interface CourseDetails
+  extends Pick<
+    KualiCourseItem,
+    'pid' | 'title' | 'description' | 'dateStart' | 'credits'
+  > {
+  /**
+   * Abbriviation of the subject of the course.
+   * @example "ECE"
+   */
+  subject: string;
+  /**
+   * The code portion of the course.
+   * @example "260"
+   */
+  code: string;
+  /**
+   * If a course was named something else previously.
+   * @example "ELEC260"
+   */
+  formally?: string;
 }
